--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.11.0
   cloud_firestore: ^4.6.0
   shared_preferences: ^2.1.0
+  device_info_plus: ^9.0.1
+  flutter_background_service: ^2.4.6
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
